--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
 	"name": "fcc-learn-npm-package-json",
+  "author":"Juan Leonardo de la Cruz Reyes",
+  "description":"This is a practice project",
+  "version":"1.0",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
@@ -13,5 +16,7 @@
 	"repository": {
 		"type": "git",
 		"url": "https://idontknow/todo.git"
-	}
+	},
+  "license":"MIT",
+  "keywords":["freecodecamp","nodejs","software","npm"]
 }
